NATTQA-ENV/force-app/main/default/objects/sbaa__ApprovalCondition__c/sbaa__ApprovalCondition__c.object-meta.xml
<CustomObject>
    <customHelpPage>sbaa__ApprovalConditionHelp</customHelpPage>
    <description>Condition that must be fulfilled in order for an Approval to occur.</description>
    <label>Approval Condition</label>
    <nameField>
        <displayFormat>AC-{000000}</displayFormat>
        <label>Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Condition</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>