NATTQA-ENV/force-app/main/default/objects/sbaa__ApprovalCondition__c/fields/sbaa__TestedField__c.field-meta.xml
<CustomField>
    <fullName>sbaa__TestedField__c</fullName>
    <description>Field tested when evaluating the Condition</description>
    <inlineHelpText>Field tested when evaluating the Condition</inlineHelpText>
    <label>Tested Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Name</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>Probability</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Type__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Qty__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Special_Req_Price_Update__c</fullName>
            </value>
            <value>
                <fullName>Container_Special_Requirement_Comments__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Product_Type__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Feature_Option_Map_Check__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_GrossMargin_w_Warranty1__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Tentative_Ship_Sc_Update_Check__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Shipment_Schedule_Update__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Requested_Ship_Date_Up_Check__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>